--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,13 @@
 .idea/laravel-ticket-composer.iml
 .idea/modules.xml
 .idea/vcs.xml
+laravel/.idea/.gitignore
+laravel/.idea/deployment.xml
+laravel/.idea/laravel.iml
+laravel/.idea/modules.xml
+laravel/.idea/php.xml
+laravel/.idea/phpunit.xml
+laravel/.idea/vcs.xml
+laravel/.idea/commandlinetools/Laravel_2021_06_23_7_15.xml
+laravel/.idea/commandlinetools/schemas/frameworkDescriptionVersion1.1.4.xsd
+.idea/php.xml
